--- a/views/index.html
+++ b/views/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index-aap11yGc.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-tFc3CnSO.css">
+    <script type="module" crossorigin src="/assets/index-xMsIJ22H.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/index-gTVLyNPH.css">
   </head>
   <body>
     <div id="app"></div>
